# keramics

./: .gitattributes  .gitignore  .rumdl.toml  Cargo.toml  README.md  codecov.yml
docs/mdbook-tables/: Cargo.toml
docs/mdbook-tables/src/: main.rs
fuzz/: Cargo.toml
keramics-checksums/: Cargo.toml  README.md
keramics-checksums/src/: adler32.rs  crc32.rs  lib.rs
keramics-compression/: Cargo.toml  README.md
keramics-compression/src/: adc.rs  bzip2.rs  deflate.rs  huffman.rs  lib.rs  lzfse.rs  lznt1.rs  lzvn.rs  lzx.rs  traits.rs  zlib.rs
keramics-core/: Cargo.toml  README.md
keramics-core/src/: data_stream.rs  debug_trace.rs  enums.rs  errors.rs  fake_data_stream.rs  formatters.rs  lib.rs  macros.rs  mediator.rs  os_data_stream.rs
keramics-datetime/: Cargo.toml  README.md
keramics-datetime/src/: constants.rs  enums.rs  epoch.rs  fat.rs  filetime.rs  hfs.rs  lib.rs  posix.rs  util.rs
keramics-drivers/: Cargo.toml  README.md
keramics-drivers/src/: format_identifier.rs  lib.rs  scanner.rs
keramics-drivers/src/filesystem/: mod.rs
keramics-drivers/src/filesystem/ext/: mod.rs
keramics-drivers/src/filesystem/fat/: mod.rs
keramics-drivers/src/filesystem/hfs/: mod.rs
keramics-drivers/src/filesystem/ntfs/: mod.rs
keramics-drivers/src/filesystem/xfs/: mod.rs
keramics-drivers/src/image/: mod.rs
keramics-drivers/src/image/ewf/: mod.rs
keramics-drivers/src/image/pdi/: mod.rs
keramics-drivers/src/image/qcow/: mod.rs
keramics-drivers/src/image/sparsebundle/: mod.rs
keramics-drivers/src/image/sparseimage/: mod.rs
keramics-drivers/src/image/splitraw/: mod.rs
keramics-drivers/src/image/udif/: mod.rs
keramics-drivers/src/image/vhd/: mod.rs
keramics-drivers/src/image/vhdx/: mod.rs
keramics-drivers/src/resolver/: local.rs  mod.rs  source_resolver.rs
keramics-drivers/src/source/: capabilities.rs  cursor.rs  data_source.rs  extent_map.rs  local.rs  memory.rs  mod.rs  observed.rs  probe_cache.rs  segmented.rs  slice.rs  util.rs
keramics-drivers/src/volume/: mod.rs
keramics-encodings/: Cargo.toml  README.md
keramics-encodings/src/: ascii.rs  base64.rs  character_decoder.rs  character_encoder.rs  enums.rs  iso8859_1.rs  iso8859_10.rs  iso8859_11.rs  iso8859_13.rs  iso8859_14.rs  iso8859_15.rs  iso8859_16.rs  iso8859_2.rs  iso8859_3.rs  iso8859_4.rs  iso8859_5.rs  iso8859_6.rs  iso8859_7.rs  iso8859_8.rs  iso8859_9.rs  koi8_r.rs  koi8_u.rs  lib.rs  mac_arabic.rs  mac_celtic.rs  mac_central_eur_roman.rs  mac_croatian.rs  mac_cyrillic.rs  mac_dingbats.rs  mac_farsi.rs  mac_gaelic.rs  mac_greek.rs  mac_hebrew.rs  mac_icelandic.rs  mac_inuit.rs  mac_roman.rs  mac_romanian.rs  mac_russian.rs  mac_symbol.rs  mac_thai.rs  (+16 more)
keramics-encodings/tests/: ascii.rs  iso8859_1.rs  iso8859_10.rs  iso8859_11.rs  iso8859_13.rs  iso8859_14.rs  iso8859_15.rs  iso8859_16.rs  iso8859_2.rs  iso8859_3.rs  iso8859_4.rs  iso8859_5.rs  iso8859_6.rs  iso8859_7.rs  iso8859_8.rs  iso8859_9.rs  koi8_r.rs  koi8_u.rs  mac_arabic.rs  mac_celtic.rs  mac_central_eur_roman.rs  mac_croatian.rs  mac_cyrillic.rs  mac_dingbats.rs  mac_farsi.rs  mac_gaelic.rs  mac_greek.rs  mac_hebrew.rs  mac_icelandic.rs  mac_inuit.rs  mac_roman.rs  mac_romanian.rs  mac_russian.rs  mac_symbol.rs  mac_thai.rs  mac_turkish.rs  mac_ukrainian.rs  windows1250.rs  windows1251.rs  windows1252.rs  (+10 more)
keramics-hashes/: Cargo.toml  README.md
keramics-hashes/src/: lib.rs  md5.rs  sha1.rs  sha224.rs  sha256.rs  sha512.rs  traits.rs
keramics-hashes/tests/: md5.rs  sha1.rs  sha224.rs  sha256.rs  sha512.rs
keramics-layout-map/: Cargo.toml  README.md
keramics-layout-map/src/: bitmap.rs  enums.rs  errors.rs  lib.rs  macros.rs  options.rs  structure.rs
keramics-python/: Cargo.toml  README.md  pyproject.toml  setup.cfg  tox.ini
keramics-python/src/: datetime.rs  lib.rs  vfs.rs
keramics-python/tests/: test_module.py  test_vfs.py
keramics-sigscan/: Cargo.toml  README.md
keramics-sigscan/src/: constants.rs  enums.rs  groups.rs  lib.rs  pattern_weights.rs  scan_context.rs  scan_object.rs  scan_result.rs  scan_tree.rs  scan_tree_node.rs  scanner.rs  signature.rs  signature_table.rs  skip_table.rs
keramics-tools/: Cargo.toml  README.md
keramics-tools/src/: bodyfile.rs  display_path.rs  enums.rs  export_tool.rs  formatters.rs  hash_tool.rs  image_tool.rs  info_tool.rs  range_stream.rs  writer.rs
keramics-tools/src/info/: apm.rs  constants.rs  ewf.rs  ext.rs  fat.rs  gpt.rs  mbr.rs  mod.rs  ntfs.rs  pdi.rs  qcow.rs  sparseimage.rs  udif.rs  vhd.rs  vhdx.rs  vmdk.rs
keramics-types/: Cargo.toml  README.md
keramics-types/src/: byte_string.rs  constants.rs  lib.rs  macros.rs  ucs2_string.rs  utf16_string.rs  uuid.rs
keramics-vfs/: Cargo.toml  README.md
keramics-vfs/src/: context.rs  data_fork.rs  data_forks.rs  enums.rs  extended_attribute.rs  extended_attributes.rs  file_entries.rs  file_entry.rs  file_resolver.rs  file_system.rs  lib.rs  location.rs  path.rs  resolver.rs  string.rs  types.rs
keramics-vfs/src/apm/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/ewf/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/fake/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/finder/: finder.rs  mod.rs
keramics-vfs/src/gpt/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/iterators/: file_entries.rs
keramics-vfs/src/mbr/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/os/: directory_entries.rs  file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/pdi/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/qcow/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/scanner/: mod.rs  scan_context.rs  scan_node.rs  scan_options.rs  scanner.rs  traits.rs
keramics-vfs/src/sparseimage/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/splitraw/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/udif/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/vhd/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/vhdx/: file_entry.rs  file_system.rs  mod.rs
keramics-vfs/src/vmdk/: file_entry.rs  file_system.rs  mod.rs
(+430 files in other folders)
