[package]
name = "keramics-checksums"
description = "Keramics checksum calculation methods"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "keramics_checksums"
path = "src/lib.rs"
