[package]
name = "keramics-compression"
description = "Keramics decompression methods"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "keramics_compression"
path = "src/lib.rs"

[dependencies]
keramics-checksums = { version = "0.0.1", path = "../keramics-checksums" }
keramics-core = { version = "0.0.1", path = "../keramics-core" }
keramics-layout-map = { version = "0.0.1", path = "../keramics-layout-map" }
keramics-types = { version = "0.0.1", path = "../keramics-types" }
