[package]
name = "keramics-datetime"
description = "Keramics date and time types"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "keramics_datetime"
path = "src/lib.rs"

[dependencies]
keramics-types = { version = "0.0.1", path = "../keramics-types" }
