[package]
name = "keramics-hashes"
description = "Keramics digest hash calculation methods"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
name = "keramics_hashes"
path = "src/lib.rs"

[dependencies]
keramics-core = { version = "0.0.1", path = "../keramics-core" }
keramics-types = { version = "0.0.1", path = "../keramics-types" }
