[package]
name = "keramics-layout-map"
description = "Keramics layout map procedural macros"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "keramics_layout_map"
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = { version = "0.23.0" }
prettyplease = { version = "0.2.37" }
proc-macro2 = { version = "1.0.101" }
quote = { version = "1.0.41" }
syn = { version = "2.0.106" }
