[package]
authors.workspace = true
description = "Keramics Python bindings"
edition.workspace = true
license.workspace = true
name = "keramics-python"
repository.workspace = true
version.workspace = true

[lib]
name = "pykeramics"
crate-type = ["cdylib"]

[dependencies]
keramics-core = { version = "0.0.1", path = "../keramics-core" }
keramics-datetime = { version = "0.0.1", path = "../keramics-datetime" }
keramics-formats = { version = "0.0.1", path = "../keramics-formats" }
keramics-vfs = { version = "0.0.1", path = "../keramics-vfs" }
pyo3 = { version = "0.27.1", features = ["extension-module"] }
