[package]
name = "keramics-python"
description = "Keramics Python bindings"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "pykeramics"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
keramics-core = { version = "0.0.1", path = "../keramics-core" }
keramics-datetime = { version = "0.0.1", path = "../keramics-datetime" }
keramics-formats = { version = "0.0.1", path = "../keramics-formats" }
keramics-vfs = { version = "0.0.1", path = "../keramics-vfs" }
pyo3 = { version = "0.27.1", features = ["extension-module"] }
