[build-system]
requires = ["maturin>=1.0.0,<2.0.0"]
build-backend = "maturin"

[project]
name = "pykeramics"
version = "0.0.1"
description = "Keramics Python bindings"
authors = [
    { name = "Joachim Metz", email = "joachim.metz@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"

[tool.maturin]
module-name = "pykeramics"
bindings = "pyo3"
