[package]
name = "keramics-tools"
description = "Tools for analysis of data formats"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bin]]
name = "keramicsexport"
path = "src/export_tool.rs"

[[bin]]
name = "keramicshash"
path = "src/hash_tool.rs"

[[bin]]
name = "keramicsimage"
path = "src/image_tool.rs"

[[bin]]
name = "keramicsinfo"
path = "src/info_tool.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-num = { version = "1.2.0" }
indicatif = { version = "0.18" }
keramics-core = { version = "0.0.1", path = "../keramics-core" }
keramics-datetime = { version = "0.0.1", path = "../keramics-datetime" }
keramics-encodings = { version = "0.0.1", path = "../keramics-encodings" }
keramics-formats = { version = "0.0.1", path = "../keramics-formats" }
keramics-hashes = { version = "0.0.1", path = "../keramics-hashes" }
keramics-types = { version = "0.0.1", path = "../keramics-types" }
keramics-vfs = { version = "0.0.1", path = "../keramics-vfs" }
