[package]
name = "keramics-vfs"
description = "Keramics Virtual File System (VFS)"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
name = "keramics_vfs"
path = "src/lib.rs"

[dependencies]
keramics-core = { version = "0.0.1", path = "../keramics-core" }
keramics-datetime = { version = "0.0.1", path = "../keramics-datetime" }
keramics-formats = { version = "0.0.1", path = "../keramics-formats" }
keramics-sigscan = { version = "0.0.1", path = "../keramics-sigscan" }
keramics-types = { version = "0.0.1", path = "../keramics-types" }
