[package]
authors.workspace = true
description = "mdbook preprocessor for extended Markdown tables"
edition.workspace = true
license.workspace = true
name = "mdbook-tables"
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
mdbook-preprocessor = { version = "0.5.0" }
pulldown-cmark = { version = "0.13.0" }
pulldown-cmark-to-cmark = { version = "21.1.0" }
serde_json = { version = "1.0.145" }
