[package]
name = "mdbook-tables"
description = "mdbook preprocessor for extended Markdown tables"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
mdbook-preprocessor = { version = "0.5.2" }
pulldown-cmark = { version = "0.13.0" }
pulldown-cmark-to-cmark = { version = "21.1.0" }
serde_json = { version = "1.0.145" }
